--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
-    "date-fns": "^4.1.0"
+  "name": "ts-labs",
+  "version": "1.0.0",
+  "description": "TypeScript debugging practice labs",
+  "scripts": {
+    "check:lab-1": "tsc lab-1/index.ts --noEmit --strict"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.0"
   }
 }
